--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,8 +38,12 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  main:       #faceb9,
+  btn:        #3f7c63,
+  bckground:         #8ac99f
 );
+
 
 
 // App iOS Variables
