Color page c rahman

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,19 +1,19 @@
-// .home-background{
+// .home{
 //     background-image: url('assets/imgs/Logo2.jpeg') no-repeat;
 //     background-size: cover;
-//     // -webkit-background-size: cover;
-//     // -moz-background-size: cover;
+//     -webkit-background-size: cover;
+//     -moz-background-size: cover;
+// //     background-position: center;
+// //     margin: auto;
+// //     z-index: 2;
+// }
+
+// .home.scroll-content{
+//     background: url('assets/imgs/Logo2.jpeg') no-repeat;
+//     background-size: cover;
 //     background-position: center;
 //     margin: auto;
 //     z-index: 2;
-// }
-
-// .background.scroll-content{
-//     background: url('assets/imgs/Logo1.jpeg') no-repeat;
-//     background-size: cover;
-//     // background-position: center;
-//     // margin: auto;
-//     // z-index: 2;
 //     }
 
 .home{
