--- a/src/pages/selection/selection.scss
+++ b/src/pages/selection/selection.scss
@@ -1,5 +1,7 @@
 .card-background-page {
 
+   background-color: color($colors, bckground);
+
     ion-card {
       position: relative;
       text-align: center;
