--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
 <ion-menu [content] = "content">
     <h2>NAVIGATION</h2>
-    <button ion-button full>Back</button>
-    <button ion-button full>HomePage</button>
-    <button ion-button full>Favourite</button>
-    <button ion-button full>Signout</button>
+    <button ion-button full color="btn">Back</button>
+    <button ion-button full color="btn">HomePage</button>
+    <button ion-button full color="btn">Favourite</button>
+    <button ion-button full color="btn">Signout</button>
 </ion-menu>
 
 
