--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,16 +1,19 @@
-<ion-menu [content] = "content">
-    <h2>NAVIGATION</h2>
-    <button ion-button full color="btn">Back</button>
-    <button ion-button full color="btn">HomePage</button>
-    <button ion-button full color="btn">Favourite</button>
-    <button ion-button full color="btn">Signout</button>
-</ion-menu>
-
-
-
-
-
-
-
-
-<ion-nav #content [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+  
+    <ion-content>
+      <ion-list>
+        <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+          {{p.title}}
+        </button>
+      </ion-list>
+    </ion-content>
+  
+  </ion-menu>
+  
+  <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
+  <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
